clusters/my-cluster/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: my-crowdsec-bouncer-traefik-plugin
    namespace: traefik
spec:
    plugin:
        crowdsec-bouncer-traefik-plugin:
            CrowdsecLapiKey: 40796d93c2958f9e58345514e67740e5
            Enabled: "true"
