clusters/my-cluster/traefik/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: flux-system
spec:
  parentRefs:                               # [1]
    - name: my-tcp-gateway                  # [2]
      namespace: default                    # [3]
      sectionName: tcp                      # [4]
  hostnames:                                # [5]
    - traefik.jake-watson.co.uk
  rules:
    - backendRefs:
      - name: podinfo-traefik
        port: 9000
